force-app/main/default/objects/StnryAssetWaterActvty/StnryAssetWaterActvty.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>