force-app/main/default/objects/StnryAssetWaterActvty/fields/Consumption_Activity__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Activity__c</fullName>
    <description>AJ: Created for NZC Implementation PhII_UC008_US06, This field is created to capture Consumption Activity:</description>
    <label>Consumption Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Water</fullName>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Cooling Tower</fullName>
            </value>
            <value>
                <fullName>Flushing</fullName>
            </value>
            <value>
                <fullName>Package Drinking Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>