force-app/main/default/objects/StnryAssetWaterActvty/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>HA: Created for NZC Implementation, purpose: for multi approver change request this field has been created to populate country from from its parent site information record</description>
    <formula>TEXT(StnryAssetEnvrSrc.Country)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>