force-app/main/default/objects/StnryAssetWaterActvty/fields/Data_Validator__c.field-meta.xml
<CustomField>
    <fullName>Data_Validator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Venkat: Created as part of NZC Phase 2 implementation.
Purpose: To capture the data validator of the record</description>
    <label>Data Validator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stationary_Asset_Water_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>