force-app/main/default/objects/StnryAssetWaterActvty/fields/Water_Usage__c.field-meta.xml
<CustomField>
    <fullName>Water_Usage__c</fullName>
    <description>AJ: Created for NZC Implementation PhII_UC008_US06, This field is created to capture Water Usage for this Water Activity record:</description>
    <formula>Quantity / ((EndDate - StartDate) * StnryAssetEnvrSrc.Site_Headcount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a system calculated field to show water consumption on per capita per day basis.</inlineHelpText>
    <label>Water Usage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>