force-app/main/default/objects/StnryAssetWaterActvty/fields/Withdrawal_Activity__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Activity__c</fullName>
    <description>RRD: Created for NZC Implementation PhII_UC008_US21, This field is created to capture Water Usage for this Water Activity record:</description>
    <label>Withdrawal Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground water</fullName>
            </value>
            <value>
                <fullName>Municipal water</fullName>
            </value>
            <value>
                <fullName>Tanker water</fullName>
            </value>
            <value>
                <fullName>AHU condensate</fullName>
            </value>
            <value>
                <fullName>Rainwater</fullName>
            </value>
            <value>
                <fullName>Drinking water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>