force-app/main/default/objects/StnryAssetWaterActvty/validationRules/If_User_is_Data_Processor_and_Site_ULA.validationRule-meta.xml
<ValidationRule>
    <fullName>If_User_is_Data_Processor_and_Site_ULA</fullName>
    <active>true</active>
    <description>SB: 27 Mar 2025: Created validation rule to restrict Data Processor user from creating new record when Site Information is of ULA type</description>
    <errorConditionFormula>AND(ISPICKVAL( $User.User_Type__c , &quot;Data Processor&quot;),StnryAssetEnvrSrc.NZC_ULA__c=TRUE)</errorConditionFormula>
    <errorMessage>Water Data Entry for ULA Site is not allowed, please do it for Non-ULA Site</errorMessage>
</ValidationRule>