force-app/main/default/objects/StnryAssetWaterActvty/listViews/AMER_Data_Approver_StnryAssetWaterActvty.listView-meta.xml
<ListView>
    <fullName>AMER_Data_Approver_StnryAssetWaterActvty</fullName>
    <filterScope>Queue</filterScope>
    <label>AMER Data Approver</label>
    <queue>AMER_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>