force-app/main/default/objects/StnryAssetWaterActvty/listViews/APAC_Phillipines_Data_Approver_StnryAssetWaterActvty.listView-meta.xml
<ListView>
    <fullName>APAC_Phillipines_Data_Approver_StnryAssetWaterActvty</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Phillipines Data Approver</label>
    <queue>APAC_Phillipines_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>