force-app/main/default/objects/StnryAssetWaterActvty/listViews/LATAM_Data_Approver_StnryAssetWaterActvty.listView-meta.xml
<ListView>
    <fullName>LATAM_Data_Approver_StnryAssetWaterActvty</fullName>
    <filterScope>Queue</filterScope>
    <label>LATAM Data Approver</label>
    <queue>LATAM_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>